# BLU-fx

./: .gitignore  CMakeLists.txt  Makefile.mac  README.md  blu_fx.cpp
GLee5_4/: GLee.h
SDK/Libraries/Mac/XPLM.framework/: XPLM
SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
blu_fx.xcodeproj/: project.pbxproj
blu_fx.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
docker/: Dockerfile  Makefile  Makefile_no_cache  README.md
tools/: notarize_plugin.sh  notarize_plugin_real.sh  xpdepot.py
